# CircularPiCam

./: .gitignore  CMakeLists.txt  requirements.txt
src/SimpleCapture/: main.cpp
src/go/process_capture/: process_capture.go
src/python/: circ.py  raw.py
src/systemd/: circular-picam.service
